🎉 FINAL: Zphisher Enhanced v2.3.5 Complete
✅ CRITICAL BUGS FIXED (5):
1. 404 errors: Added index.html to all 44 templates
2. IP not captured: Added ip.php call in login.html
3. IP showed empty: Fixed capture_ip() regex
4. Template mixing: Added cleanup in setup_site()
5. Architecture detection: Fixed aarch64 in install_bore()

✅ NEW FEATURES (3):
1. Advanced Geolocation (9 fields):
   • IP Address, Country, Region, City
   • ISP + Organization, GPS Coordinates
   • Timezone, Device Type, OS with version
   • Browser detection with User-Agent

2. Bore Tunnel Integration:
   • Auto-download for aarch64/x86_64
   • Intelligent retry on connection failure
   • Proper URL display via custom_url()
   • Note: bore.pub server may be unstable

3. Pinggy Tunnel Integration:
   • SSH-based (no binary download needed)
   • Dedicated SSH key (no passphrase prompt)
   • 60 minutes free per session
   • Full URL display with is.gd shortener
   • TESTED & WORKING ✓

✅ IMPROVEMENTS (7):
1. download(): Added .tar.gz support for Bore
2. start_bore/pinggy(): Call custom_url() for UX consistency
3. custom_url(): Added bore.pub, pinggy.link to regex
4. kill_pid(): Terminal reset on exit + all processes
5. All tunnel functions: Proper flow with capture_data()
6. IP tracking: Works with IPv4 and IPv6
7. Geolocation: 9-field comprehensive tracking

✅ 6 TUNNEL OPTIONS:
[01] Localhost      - Local network only
[02] Serveo         - SSH-based (currently DOWN)
[03] LocalXpose     - 15min free ⭐ WORKING
[04] Cloudflared    - May fail on Android
[05] Bore           - Free open source (bore.pub unstable)
[06] Pinggy         - 60min SSH ⭐⭐ WORKING & TESTED

✅ TESTED ENVIRONMENT:
- Platform: Termux Android
- Architecture: aarch64 (arm64-v8a)
- PHP: 8.4.2
- Successful tests: Pinggy, LocalXpose
- IP capture: ✓ IPv4/IPv6 working
- Geolocation: ✓ All 9 fields validated
- Templates: ✓ All 44 functional

📊 PROJECT STATS:
- Files modified: 1 (zphisher.sh)
- Templates updated: 44 (all sites)
- Functions add

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,41 @@
+# Captured data - NEVER commit
+auth/ip.txt
+auth/usernames.txt
+auth/credentials.txt
 
-# Datos capturados (sensibles)
-auth/
-auth/*
-*.dat
-*.txt
-
-# Archivos temporales del servidor
-.server/www/
-.server/www/*
+# Tunnel logs - may contain IPs
+.server/.loclx/
+.server/.bore.log
+.server/.pinggy.log
 .server/.cld.log
-.server/.loclx
 .server/.serveo.log
+.server/.locllt.log
 
-# Configuración personal
-.localxpose/
-.localxpose/*
-
-# Backups
+# Backup files
 *.backup
 *.backup-*
+zphisher.sh.backup-*
 
-# Logs
-*.log
-debug.txt
+# Temporary scripts
+add_*.sh
+fix_*.sh
+remove_*.sh
+debug_*.sh
+analyze_*.sh
+
+# System files
+nohup.out
+.DS_Store
+*.swp
+*.swo
+*~
+
+# Binaries
+.server/cloudflared
+.server/loclx
+.server/bore
+
+# SSH keys (if any)
+*.pem
+*.key
+id_rsa*
